@@ -78,7 +78,7 @@
   
   <tr>
     <th align="left"><a href="./format_outcar.html">OUTCAR</a> (VASP format)</th>
-    <td><img src="../img/yes.png" alt="YES" title="Atomsk can read this format"> [<abbr title="Atom forces">f</abbr>]</td>
+    <td><img src="../img/yes.png" alt="YES" title="Atomsk can read this format"> [<abbr title="Atom forces">f</abbr>] (<a href="./mode_oneinall.html">mode one-in-all</a> only)</td>
     <td><img src="../img/no.png" alt="NO" title="Atomsk can not write to this format"></td>
   </tr>
   
