@@ -20,7 +20,7 @@
 
 <h4>Description</h4>
 
-<p>This mode constructs a chain of &#60;N&#62; configurations by interpolating linearly the positions of atoms between the configurations given by the &#60;file1&#62; and the &#60;file2&#62;. The vectors of the simulation box are also interpolated.</p>
+<p>This mode constructs a chain of configurations by interpolating linearly the positions of atoms between the configurations given by the &#60;file1&#62; and the &#60;file2&#62;. The number &#60;N&#62; gives the number of configurations generated between the initial and final states. The vectors of the simulation box are also interpolated.</p>
 
 <p>The two given files <em>must</em> have the exact same number of particles, and shall correspond to the same system (i.e. same base vectors, same atom types, etc.) for the interpolation to make sense. The two files may be in different formats as long as these formats are <a href="./formats.html">supported by Atomsk</a>.</p>
 
@@ -28,7 +28,9 @@
 
 <p>If you use this mode with one or several <a href="./options.html">options</a>, then these options will be applied to each interpolated configuration.</p>
 
-<p>Note that only the interpolated images are written by this mode, and <em>not</em> the initial and final images. Also, note that some of the configurations produced by interpolations may not correspond to stable states, or even to physically realistic states, of the system. Such a chain of configurations may be used e.g. as a starting point for a Nudged Elastic Band (NEB) calculation, or simply to produce an animation between two states.</p>
+<p>This mode produces &#60;N&#62;+2 output configurations, numbered from 0 up to &#60;N&#62;+1. The configuration 0 corresponds to the initial state, configuration number &#60;N&#62;+1 to the final one, so that the intermediate configurations are indexed from 1 to &#60;N&#62;.</p>
+
+<p>Note that some of the configurations produced by interpolations may not correspond to stable states, or even to physically realistic states, of the system. Such a chain of configurations may be used e.g. as a starting point for a Nudged Elastic Band (NEB) calculation, or simply to produce an animation between two states.</p>
 
 
 
@@ -36,7 +38,7 @@
 
 <ul>
 <li><code class="command">atomsk --interpolate initial.xsf final.xsf 7 chain cfg</code>
-<p>This will construct 7 configurations by interpolating between <code>initial.xsf</code> and <code>final.xsf</code>. The interpolated configurations will be named <code>chain_img1.cfg</code>, <code>chain_img2.cfg</code>, ..., <code>chain_img7.cfg</code>.</p></li>
+<p>This will construct 7 configurations by interpolating between <code>initial.xsf</code> and <code>final.xsf</code>. The resulting configurations will be named <code>chain_img0.cfg</code>, <code>chain_img1.cfg</code>, up to <code>chain_img8.cfg</code>.</p></li>
 </ul>
 
 <p><a href="./index.html">Back to main menu</a></p>
