@@ -34,7 +34,7 @@
   <tr>
     <th align="left"><a href="./format_dd.html">dd</a> (ddplot)</th>
     <td><img src="../img/no.png" alt="NON" title="Atomsk ne peut pas lire ce format"></td>
-    <td><img src="../img/yes.png" alt="OUI" title="Atomsk peut écrire ce format"> (<a href="./mode_ddplot.html">mode ddplot</a> only)</td>
+    <td><img src="../img/yes.png" alt="OUI" title="Atomsk peut écrire ce format"> (<a href="./mode_ddplot.html">mode ddplot</a> seulement)</td>
   </tr>
   
   <tr>
@@ -78,7 +78,7 @@
   
   <tr>
     <th align="left"><a href="./format_outcar.html">OUTCAR</a> (VASP)</th>
-    <td><img src="../img/yes.png" alt="YES" title="Atomsk can read this format"> [<abbr title="Atom forces">f</abbr>]</td>
+    <td><img src="../img/yes.png" alt="YES" title="Atomsk can read this format"> [<abbr title="Atom forces">f</abbr>] (<a href="./mode_oneinall.html">mode one-in-all</a> seulement)</td>
     <td><img src="../img/no.png" alt="NO" title="Atomsk can not write to this format"></td>
   </tr>
   
@@ -90,7 +90,7 @@
   
   <tr>
     <th align="left"><a href="./format_qeout.html">out</a> (format de sortie Quantum Espresso)</th>
-    <td><img src="../img/yes.png" alt="OUI" title="Atomsk peut lire ce format"> (<a href="./mode_oneinall.html">mode one-in-all</a> only)</td>
+    <td><img src="../img/yes.png" alt="OUI" title="Atomsk peut lire ce format"> (<a href="./mode_oneinall.html">mode one-in-all</a> seulement)</td>
     <td><img src="../img/no.png" alt="NO" title="Atomsk ne peut pas écrire ce format"> </td>
   </tr>
   
